--- a/metadata.yaml
+++ b/metadata.yaml
@@ -17,7 +17,7 @@ doc_title: "Community Engagement Team (CET) Guidelines for Tutorials"
 
 # Author names, ordered as a list. Each author name should be formatted as 'First Last'
 authors:
-  - "Matthew Rumore"
+  - "Christina Adair"
 
 # Current document revision date, YYYY-MM-DD
 # Only set this field if you need to manually fix the revision date;
@@ -34,7 +34,7 @@ authors:
 # doi: 10.5281/zenodo.#####
 
 # Copyright statement
-copyright: "2022, Association of Universities for Research in Astronomy, Inc. (AURA)"
+copyright: "2022, Vera C. Rubin Observatory"
 
 # Description. A short, 1-2 sentence statemement used by document indices.
 description: "Principles, guidelines, conventions, formatting style, and workflow for tutorials developed by the Community Engagement Team (CET)."
