--- a/metadata.yaml
+++ b/metadata.yaml
@@ -17,7 +17,7 @@ doc_title: "Guidelines for User Tutorials"
 
 # Author names, ordered as a list. Each author name should be formatted as 'First Last'
 authors:
-  - "The Rubin Community Engagement Team"
+  - "The Rubin Observatory Community Engagement Team"
 
 # Current document revision date, YYYY-MM-DD
 # Only set this field if you need to manually fix the revision date;
