--- a/metadata.yaml
+++ b/metadata.yaml
@@ -17,7 +17,7 @@ doc_title: "Guidelines for User Tutorials"
 
 # Author names, ordered as a list. Each author name should be formatted as 'First Last'
 authors:
-  - "The Rubin Observatory Community Engagement Team"
+  - "The Rubin Observatory Community Science Team"
 
 # Current document revision date, YYYY-MM-DD
 # Only set this field if you need to manually fix the revision date;
@@ -37,7 +37,7 @@ authors:
 copyright: "2022, Vera C. Rubin Observatory"
 
 # Description. A short, 1-2 sentence statemement used by document indices.
-description: "Principles, guidelines, conventions, formatting style, and workflow for tutorials developed by the Community Engagement Team (CET)."
+description: "Principles, guidelines, conventions, formatting style, and workflow for tutorials developed by the Community Science Team (CST)."
 
 # Abstract, if available
 # abstract: >
