Add date created field

--- a/technote.toml
+++ b/technote.toml
@@ -4,6 +4,7 @@ series_id = "RTN"
 canonical_url = "https://rtn-045.lsst.io/"
 github_url = "https://github.com/lsst/rtn-045"
 github_default_branch = "main"
+date_created = "2022-09-12T10:52:35-0700"
 organization.name = "Vera C. Rubin Observatory"
 organization.ror = "https://ror.org/048g3cy84"
 license.id = "CC-BY-4.0"
